# Morris

./: .env.example  .gitignore  AGENTS.md  ORIGINAL_REQUEST.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
.kiro/settings/: lsp.json  mcp.json
.kiro/steering/: architecture.md  contracts.md  design-system.md  errors-and-observability.md  pre-implementation.md  scope.md  testing.md
apps/agent/: AGENTS.md  README.md  pyproject.toml
apps/agent/agent/: __init__.py  contracts.py  logging.py  main.py  retry.py
apps/agent/agent/interview/: __init__.py  egress_recorder.py  engine.py  runtime_bridge.py  supervisor.py  task_group_builder.py  transcript.py  workflow.py
apps/agent/agent/interview/tasks/: __init__.py  question.py
apps/agent/agent/persistence/: __init__.py  appwrite_repository.py  serializers.py
apps/agent/agent/providers/: __init__.py  deepseek.py  gemini.py  qwen.py  qwen_llm.py  settings.py
apps/agent/tests/: test_appwrite_skew.py  test_contracts.py  test_egress_local_path.py  test_egress_request_shape.py  test_livekit_smoke.py  test_main.py  test_providers.py  test_recording_persistence.py  test_runtime_bridge.py  test_transcript_normalize.py  test_transcript_persistence.py  test_usage_event_persistence.py  test_workflow.py
apps/agent/tests/load/: __init__.py  cascade_pressure_test.py  live_pressure_test.py  long_survey_fixture.py  synth_fake_mic.py
apps/agent/tests/properties/: _template_test.py
apps/functions/: AGENTS.md
docs/: sub-spec-template.md  项目缺口报告.md
scripts/: backfill-workspace-tenancy.ts  check-env.sh  deploy-function.sh  e2e-verify-editor.mjs  migrate-default-workspaces.ts  run-analyze-session-visual.mts  run-analyze-session.mts  run-analyze-survey.mts  scope-guard.ts  seed-plans.ts  seed-sessions.ts  seed-survey.ts  seed-workspace.ts  set-function-vars.sh  smoke-stress.mts  smoke.mts  smoke.sh  smoke.ts  stack-down.sh  stack-reset.sh  stack-up.sh  test-py.sh  verify-survey-editor.ts
scripts/poc-gemini-batch/: poll_existing_batch.py  pyproject.toml  verify_gemini_batch.py
scripts/poc-omni-realtime/: README.md  poc.py  pyproject.toml  qwen_tts_realtime_tts.py  verify_qwen_omni_realtime.py  verify_qwen_tts_realtime.py  verify_tts_adapter_standalone.py
(+577 files in other folders)
